ADDED a testing chatbot

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://bot.orimon.ai/deploy/index.js" tenantId="4520079a-0125-4ff6-afe2-be9c14aa6312"></script>
   </body>
 </html>
